testsuite/tests/parser/should_fail/T18251d.hs
{-# LANGUAGE ExplicitForAll #-}

module T18251d where

f :: forall a. a -> ()
f @a _ = ()
